# agently

./: .flake8  .gitignore  .pre-commit-config.yaml  DISTRIBUTION.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test-invalid.yaml
.github/workflows/: build-executables.yml  build.yml  publish.yml
agently/: __init__.py  _version.py  version.py
agently/agents/: agent.py  prompts.py  reasoning.py
agently/cli/: commands.py  config.py  formatting.py  interactive.py  lockfile.py  plugin_manager.py
agently/cli/output/: __init__.py  formatters.py  manager.py  styles.py
agently/config/: __init__.py  parser.py  schema.json  types.py
agently/conversation/: context.py  manager.py
agently/core/: __init__.py
agently/errors/: __init__.py  handler.py  types.py
agently/models/: base.py  ollama.py  openai.py
agently/plugins/: base.py  manager.py  sources.py
agently/utils/: __init__.py  cli_format.py  logging.py
cli/: commands.py
config/: parser.py
examples/: README.md
examples/coder_agent/: agently.lockfile.json  agently.yaml  example_code.py
examples/coder_agent/plugins/coder/: __init__.py
examples/git_mcp_example/: README.md  agently.lockfile.json  agently.yaml
examples/hello_local/: README.md  agently.lockfile.json  agently.yaml
examples/hello_local/plugins/hello/: __init__.py
examples/hello_remote/: agently.lockfile.json  agently.yaml
examples/hello_world/: README.md  agently.yaml  test_plugin.py
examples/hello_world/plugins/hello/: __init__.py
examples/mcp_hello_goodbye/: README.md  agently.lockfile.json  agently.yaml
examples/mcp_hello_goodbye/servers/: hello_goodbye_server.py
examples/multi_agent/: README.md  agently.lockfile.json  agently.yaml
examples/tmp-agently-demo/: agently.lockfile.json  agently.yaml
scripts/: build_executable.py
test-env/: pyvenv.cfg
test_env/: pyvenv.cfg
tests/: test_cli_commands.py  test_cli_integration.py  test_config_parser.py  test_conversation.py  test_core.py  test_github_plugin.py  test_github_plugin_config.py  test_local_plugin.py  test_plugin_variables.py  test_unified_plugins.py
